--- a/LibraryMangement/Views/Lend/Empty.cshtml
+++ b/LibraryMangement/Views/Lend/Empty.cshtml
@@ -1,5 +1,3 @@
-﻿@model LibraryMangement.ViewModels.CustomerViewModel
-<h2>No Customers Availble</h2>
-<h2>Stat Adding a Customer Today</h2>
+﻿<h2>No Books Availble</h2>
+<h2>Return Some Books From The Customers</h2>
 
-<a class="btn btn-success" style="margin: 10px" asp-controller="Customer" asp-action="Create">New Customer</a>
