--- a/LibraryMangement/Views/Book/Empty.cshtml
+++ b/LibraryMangement/Views/Book/Empty.cshtml
@@ -1,5 +1,4 @@
-﻿@model LibraryMangement.ViewModels.CustomerViewModel
-<h2>No Customers Availble</h2>
-<h2>Stat Adding a Customer Today</h2>
+﻿<h2>No Books Availble</h2>
+<h2>Stat Adding Books Today</h2>
 
-<a class="btn btn-success" style="margin: 10px" asp-controller="Customer" asp-action="Create">New Customer</a>
+<a class="btn btn-success" style="margin: 10px" asp-controller="Book" asp-action="Create">New Book</a>
